2001-04-23  Paul Eggert  <eggert@twinsun.com>

        * posix/getopt.h (getopt_long, getopt_long_only, _getopt_internal):
        Rename __argc to ___argc in prototypes to avoid compatibility
        problems with systems that reserve the identifier "__argc".
        Similarly for __argv.

2001-08-21  Roland McGrath  <roland@frob.com>

	* stdio-common/tst-fseek.c: Include <time.h> for `time' declaration.

	* mach/Makefile (tests): Removed.
	* mach/hello.c: File removed.

2001-08-22  Ulrich Drepper  <drepper@redhat.com>

	* po/sv.po: Update from translation team.

	* stdio-common/vfscanf.c: Fix handling of %l[].
	Reported by Mitsuru Chinen <mchinen@yamato.ibm.com>.

	* libio/Makefile (tests): Add tst-sscanf.
	* libio/tst-sscanf.c: New file.

	* elf/dl-addr.c (_dl_addr): Fix tests to determine dli_sname.
	* malloc/mtrace.c (tr_where): dli_sname always points to a
	non-empty string if != NULL.
	Reported by Tim Janik <timj@gtk.org>.

2001-08-22  Jakub Jelinek  <jakub@redhat.com>

	* sunrpc/xdr_rec.c (xdrrec_create): Fix buf sizes before allocating
	buf.  Free resources on failure.
	* sunrpc/svc_unix.c (svcunix_create): Free resources on failure.
	(makefd_xprt): Likewise.
	* sunrpc/svc_udp.c (svcudp_bufcreate): Likewise.
	* sunrpc/svc_tcp.c (svctcp_create, makefd_xprt): Likewise.
	* sunrpc/auth_unix.c (authunix_create): Likewise.

2001-08-21  Jakub Jelinek  <jakub@redhat.com>

	* string/strnlen.c: Remove.
	* sysdeps/generic/strnlen.c: New.
	* sysdeps/i386/i486/bits/string.h (strnlen): Remove.

2001-08-21  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/i386/machine-sp.h (__thread_stack_pointer): Define this
	as a macro, not an extern inline function.

	* hurd/Versions (GLIBC_2.2.5): New set, define __hurd_fail here.
	* Versions.def (libc): Add GLIBC_2.2.5 set.
	* hurd/hurd.h (_HURD_H_EXTERN_INLINE): New macro.
	(__hurd_fail): Use that instead of _EXTERN_INLINE in decl.

2001-08-20  Roland McGrath  <roland@frob.com>
